# mcp-setup-assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml
src/mcp-setup-assist/: hello.py
src/mcp_setup_assist/: __init__.py  agents.py  cli.py  hello.py  indexing.py
